crates/fortitude_linter/src/diagnostics/message/snapshots/fortitude_linter__diagnostics__message__text__tests__output_as_severity_none.snap
---
source: crates/fortitude_linter/src/diagnostics/message/text.rs
expression: content
---
test.f90:6:5: S201 'implicit none' set on the enclosing module
  |
4 | contains
5 |   subroutine foo
6 |     implicit none
  |     ------------- info: S201
7 |   end subroutine
8 | end module
  |
  = help: Remove unnecessary 'implicit none'

test.f90:7:3: S061 end statement should read 'end subroutine foo'
  |
5 |   subroutine foo
6 |     implicit none
7 |   end subroutine
  |   -------------- info: S061
8 | end module
  |

star_kind.f90:1:8: PORT021 integer*4 is non-standard, use integer(4)
  |
1 | integer*4 foo; end
  |        - info: PORT021
  |
